# chatbi-mvp

./: .gitignore  agent_planner.py  api_service.py  config.py  database.py  llm_client.py  main.py  prompt_builder.py  pyproject.toml  query_decomposer.py  report_generator.py  test_embedding.py
static/: index.html
tests/: test_agent_planner.py
